tests/snapshots/run_wpt_conformance__litert_prelu_float32_broadcast_5D_x_5D_slope_with_expanded_output_shape.snap
---
source: tests/run_wpt_conformance.rs
assertion_line: 57
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "prelu.https.any.js",
    "prelu float32 broadcast 5D x 5D slope with expanded output shape",
    "litert",
    "PASS",
)
